# py-ml-pytorch-iris-uv-docker

./: CHANGELOG  Dockerfile  Dockerfile.model  LICENSE  Makefile  README.md  TODO.md  docker-compose-model copy.yml  docker-compose-model-working.yml  docker-compose.yml  pyproject.toml
app/iris_classifier_api/: main.py
app/iris_classifier_model/: main.py
app/iris_classifier_model_trainer/: main.py
data/model/: iris_model.joblib
model/: iris_model.joblib
old/: docker-compose-model-working.yml  docker-compose-model.yml
src/old/: model.py  schema.py
src/python_docker_uv_app/: main.py
