[project]
name = "my-app"
version = "0.1.0"
description = "My docker uv app project"
dependencies = [
    "fastapi>=0.109.0", 
    "uvicorn>=0.27.0",
    "scikit-learn>=1.0",
    "numpy>=1.20",
    "scipy>=1.6",
    "torch>=2.0",
    "loguru>=0.7.3",
]
readme = "README.md"
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
